tests/ui/traits/const-traits/effects/ice-112822-expected-type-for-param.stderr
error[E0658]: const closures are experimental
  --> $DIR/ice-112822-expected-type-for-param.rs:6:5
   |
LL |     const move || {
   |     ^^^^^
   |
   = note: see issue #106003 <https://github.com/rust-lang/rust/issues/106003> for more information
   = help: add `#![feature(const_closures)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/ice-112822-expected-type-for-param.rs:1:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/ice-112822-expected-type-for-param.rs:3:25
   |
LL | const fn test() -> impl ~const Fn() {
   |                         ^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/ice-112822-expected-type-for-param.rs:3:25
   |
LL | const fn test() -> impl ~const Fn() {
   |                         ^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0015]: cannot call non-const operator in constant functions
  --> $DIR/ice-112822-expected-type-for-param.rs:11:17
   |
LL |                 assert_eq!(first, &b'f');
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
   = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0015]: cannot call non-const fn `core::panicking::assert_failed::<&u8, &u8>` in constant functions
  --> $DIR/ice-112822-expected-type-for-param.rs:11:17
   |
LL |                 assert_eq!(first, &b'f');
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
   = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 5 previous errors; 1 warning emitted

Some errors have detailed explanations: E0015, E0658.
For more information about an error, try `rustc --explain E0015`.
